added GET /call/categories
